--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "s",
+  "name": "vue3",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,10 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "element-theme-dark": "^1.0.3",
-    "element-ui": "^2.15.14",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "lodash.throttle": "^4.1.1",
+    "view-ui-plus": "^1.3.15",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~5.0.0",
@@ -20,13 +19,15 @@
     "@vue/cli-service": "~5.0.0",
     "postcss-import": "^15.1.0",
     "postcss-url": "^10.1.3",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "sass-loader": "^12.0.0"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not dead"
+    "not dead",
+    "not ie 11"
   ]
 }
