--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -14,15 +15,12 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "postcss-import": "^15.1.0",
-    "postcss-url": "^10.1.3",
+    "@vitejs/plugin-vue": "^1.6.1",
     "less": "^4.2.0",
-    "less-loader": "^11.1.3",
+    "postcss-url": "^10.1.3",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "vite": "^2.5.4",
+    "vite-plugin-cdn-import": "^0.3.5"
   },
   "browserslist": [
     "> 1%",
