--- a/package.json
+++ b/package.json
@@ -1,31 +1,24 @@
 {
-  "name": "vue3",
-  "version": "0.1.0",
+  "name": "new",
+  "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "lodash.throttle": "^4.1.1",
-    "view-ui-plus": "^1.3.15",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "axios": "^1.6.7",
+    "view-ui-plus": "^1.3.16",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.6.1",
+    "@vitejs/plugin-vue": "^5.0.3",
     "less": "^4.2.0",
     "postcss-url": "^10.1.3",
-    "sass": "^1.32.7",
-    "vite": "^2.5.4",
+    "vite": "^5.0.11",
     "vite-plugin-cdn-import": "^0.3.5"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+  }
 }
